the message board is added to entry screen. Update, search, delete, add pages are added related to message tables. Validation controls adapted to interface. Slip and overlap bugs have been fixed.

--- a/static/emin/css/default.css
+++ b/static/emin/css/default.css
@@ -51,6 +51,21 @@ margin-bottom: 20px;
 width:115px;
 }
 
+.btn3 {
+display:block;
+height:31px;
+line-height:31px;
+padding:0 10px;
+background:url(../gfx/bgbtn.jpg) repeat-x;
+color:#565e62;
+font-weight:bold;
+font-size:11px;
+border:1px solid #e1e0df;
+outline:none;
+margin-left:0px;
+margin-top: 20px;
+}
+
 .text,
 .textarea {
 padding:5px 10px;
@@ -58,7 +73,6 @@ height:27px;
 border:1px solid #ddd;
 color:#333;
 background:url(../gfx/bginput.jpg) repeat-x bottom #fff;
-position:relative;
 z-index:2;
 }
 
@@ -85,14 +99,13 @@ color:#666;
 .blocks label.ok {
 position:absolute;
 z-index:1;
-left:110px;
-padding:5px 15px 5px 280px;
+padding:5px 15px 5px 100px;
 /*reset label*/
 width:auto;
 text-align:left;
 margin:0;
 background-repeat:no-repeat;
-background-position:257px 16px;
+background-position:80px 16px;
 }
 
 .blocks label.ok {
